邮件服务+httpserver文件夹转移
新增邮件服务，这个服务，这是把邮件发送的顺序写好，还没完全写完，只有过几天再写。HttpServer文件转移。

--- a/YTalkServer/YTalkServer.vcxproj.filters
+++ b/YTalkServer/YTalkServer.vcxproj.filters
@@ -108,14 +108,23 @@
     <ClCompile Include="network\InstantiationPacketHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="httpServer\HttpServer.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="GeneratedFiles\Debug\moc_HttpServer.cpp">
       <Filter>Generated Files\Debug</Filter>
     </ClCompile>
     <ClCompile Include="GeneratedFiles\Release\moc_HttpServer.cpp">
       <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="network\httpServer\HttpServer.cpp">
+      <Filter>Generated Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Debug\moc_MailServer.cpp">
+      <Filter>Generated Files\Debug</Filter>
+    </ClCompile>
+    <ClCompile Include="GeneratedFiles\Release\moc_MailServer.cpp">
+      <Filter>Generated Files\Release</Filter>
+    </ClCompile>
+    <ClCompile Include="network\mailServer\MailServer.cpp">
+      <Filter>Generated Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -160,8 +169,11 @@
     <CustomBuild Include="network\NetLogicMainProcess.h">
       <Filter>Header Files</Filter>
     </CustomBuild>
-    <CustomBuild Include="httpServer\HttpServer.h">
-      <Filter>Header Files</Filter>
+    <CustomBuild Include="network\httpServer\HttpServer.h">
+      <Filter>Generated Files</Filter>
+    </CustomBuild>
+    <CustomBuild Include="network\mailServer\MailServer.h">
+      <Filter>Generated Files</Filter>
     </CustomBuild>
   </ItemGroup>
 </Project>
